<resources>
    <string name="app_name">calculator</string>
<!--    Keyboard    -->
    <string name="calc_reset">C</string>
    <string name="calc_eq">=</string>
    <string name="calc_par_left">(</string>
    <string name="calc_par_right">)</string>
    <string name="calc_div">\u00f7</string>
    <string name="calc_mul">\u00d7</string>
    <string name="calc_sub">-\</string>
    <string name="calc_add">+</string>
    <string name="calc_neg">+/-</string>
    <string name="calc_dot">.</string>
    <string name="calc_number0">0</string>
    <string name="calc_number1">1</string>
    <string name="calc_number2">2</string>
    <string name="calc_number3">3</string>
    <string name="calc_number4">4</string>
    <string name="calc_number5">5</string>
    <string name="calc_number6">6</string>
    <string name="calc_number7">7</string>
    <string name="calc_number8">8</string>
    <string name="calc_number9">9</string>
<!--    Advanced Keyboard   -->
    <string name="calc_sqrt">\u221a</string>
    <string name="calc_pow2">x\u00b2</string>
    <string name="calc_pow3">x\u00b3</string>
    <string name="calc_2pow">2\u02e3</string>
    <string name="calc_sin">sin</string>
    <string name="calc_cos">cos</string>
    <string name="calc_tan">tan</string>
    <string name="calc_log">log</string>
    <string name="calc_ln">ln</string>
    <string name="calc_abs">|x|</string>
    <string name="calc_pi">\u03c0</string>
    <string name="calc_e">e</string>
    <string name="calc_one_over">1/x</string>
    <!--    Other   -->
    <string name="calc_backspace">\u232b</string>
    <string name="calc_error">ERROR!</string>
</resources>