<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/table"
    style="@style/Theme.Calculator"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".KeyboardFragment"
    android:stretchColumns="*">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/button_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calc_reset" />

        <Button
            android:id="@+id/button_par_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calc_par_left" />

        <Button
            android:id="@+id/button_par_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calc_par_right" />

        <Button
            android:id="@+id/button_div"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calc_div" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/button7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calc_number7" />

        <Button
            android:id="@+id/button8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calc_number8" />

        <Button
            android:id="@+id/button9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calc_number9" />

        <Button
            android:id="@+id/button_mul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calc_mul" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calc_number4" />

        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calc_number5" />

        <Button
            android:id="@+id/button6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calc_number6" />

        <Button
            android:id="@+id/button_sub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calc_sub" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calc_number1" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calc_number2" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calc_number3" />

        <Button
            android:id="@+id/button_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calc_add" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/button_neg"
            android:text="@string/calc_neg" />

        <Button
            android:id="@+id/button0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calc_number0" />

        <Button
            android:id="@+id/button_dot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calc_dot" />

        <Button
            android:id="@+id/button_eq"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calc_eq" />
    </TableRow>
</TableLayout>