<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Theme.Calculator"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".AdvancedKeyboardFragment"
    android:id="@+id/table"
    android:stretchColumns="*">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/button_par_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />

        <Button
            android:id="@+id/button_par_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />

        <Button
            android:id="@+id/button_sqrt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calc_sqrt" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/button_sin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calc_sin" />

        <Button
            android:id="@+id/button_cos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calc_cos" />

        <Button
            android:id="@+id/button_tan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calc_tan" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/button_ln"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calc_ln" />

        <Button
            android:id="@+id/button_log"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calc_log" />

        <Button
            android:id="@+id/button_one_over"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calc_one_over" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/button_2pow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calc_2pow" />

        <Button
            android:id="@+id/button_pow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calc_pow2" />

        <Button
            android:id="@+id/button_pow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calc_pow3" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/button_abs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calc_abs" />

        <Button
            android:id="@+id/button_pi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calc_pi" />

        <Button
            android:id="@+id/button_e"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calc_e" />
    </TableRow>
</TableLayout>